--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="menu_temp2">Temp2</string>
     <string name="menu_temp3">Temp3</string>
     <string name="menu_settings">Settings</string>
+    <string name="menu_groups">Groups</string>
+
     <string name="menu_admin_settings">Admin Panel</string>
     <string name="menu_logout">Logout</string>
 
