--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="menu_temp3">Temp3</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_groups">Groups</string>
+    <string name="menu_map">Map</string>
     <string name="menu_search">Search</string>
 
     <string name="menu_admin_settings">Admin Panel</string>
