--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="menu_temp2">Temp2</string>
     <string name="menu_temp3">Temp3</string>
     <string name="menu_settings">Settings</string>
-    <string name="menu_groups">Groups</string>
+    <string name="menu_favorites">favorites</string>
     <string name="menu_map">Map</string>
     <string name="menu_search">Search</string>
 
