--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="menu_settings">Settings</string>
     <string name="menu_favorites">favorites</string>
     <string name="menu_map">Map</string>
-    <string name="menu_search">Search</string>
+    <string name="menu_my_posts">My Posts</string>
 
     <string name="menu_admin_settings">Admin Panel</string>
     <string name="menu_logout">Logout</string>
