--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,10 @@
     <string name="menu_admin_settings">Admin Panel</string>
     <string name="menu_logout">Logout</string>
 
+
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_map">Map</string>
