--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,8 @@
     <string name="take_a_photo">Take a photo</string>
     <string name="edit_profile">Edit profile</string>
     <string name="refresh">Refresh</string>
+    <string name="delete_message">are you sure?</string>
+    <string name="yes">YES</string>
+    <string name="no">NO</string>
 
 </resources>
